// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MealModal renders correctly when type is addMeal 1`] = `
<Connect(Form)
  meal={null}
  meta={
    Object {
      "btnText": "ADD MEAL",
    }
  }
  type="addMeal"
/>
`;

exports[`MealModal renders correctly when type is editMeal 1`] = `
<Connect(Form)
  meal={null}
  meta={
    Object {
      "btnText": "SAVE MEAL",
    }
  }
  type="editMeal"
/>
`;
